--- a/week02/homework_pytorch_intro.ipynb
+++ b/week02/homework_pytorch_intro.ipynb
@@ -24,7 +24,11 @@
     "%matplotlib inline\n",
     "\n",
     "import torch, torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "\n",
+    "!pip install plotly -U -q\n",
+    "\n",
+    "import plotly.express as px"
    ]
   },
   {
@@ -181,25 +185,18 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "plt.ion()\n",
-    "\n",
     "#initialize game field\n",
     "Z = np.random.choice([0,1],size=(100,100))\n",
     "Z = torch.from_numpy(Z).type(torch.FloatTensor)\n",
     "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "fig.show()\n",
-    "\n",
+    "arr = []\n",
     "for _ in range(100):\n",
     "    #update\n",
     "    Z = torch_update(Z)\n",
-    "    \n",
-    "    #re-draw image\n",
-    "    ax.clear()\n",
-    "    ax.imshow(Z.numpy(),cmap='gray')\n",
-    "    fig.canvas.draw()"
+    "    arr.append(Z.numpy().copy())\n",
+    "\n",
+    "fig = px.imshow(np.array(arr), animation_frame=0, binary_string=True)\n",
+    "fig.show()"
    ]
   },
   {
@@ -219,15 +216,13 @@
     "\n",
     "Z = torch.from_numpy(Z).type(torch.FloatTensor)\n",
     "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "fig.show()\n",
-    "\n",
+    "arr = []\n",
     "for _ in range(100):\n",
     "    Z = torch_update(Z)\n",
-    "    ax.clear()\n",
-    "    ax.imshow(Z.numpy(),cmap='gray')\n",
-    "    fig.canvas.draw()"
+    "    arr.append(Z.numpy().copy())\n",
+    "\n",
+    "fig = px.imshow(np.array(arr), animation_frame=0, binary_string=True)\n",
+    "fig.show()"
    ]
   },
   {
@@ -433,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   },
   "notebookId": "e5288bf7-d6a2-4273-865c-cc30559f7815"
  },
